@@ -1,3 +1,15 @@
+2011-11-29  Leo Yang  <leo.yang@torchmobile.com.cn>
+
+        Upstream platform/network/blackberry/ProxyServerBlackBerry.cpp
+        https://bugs.webkit.org/show_bug.cgi?id=73288
+
+        Reviewed by Antonio Gomes.
+
+        Initial upstream, can't be built yet, no new tests.
+
+        * platform/network/blackberry/ProxyServerBlackBerry.cpp: Added.
+        (WebCore::proxyServersForURL):
+
 2011-11-29  Jessie Berlin  <jberlin@apple.com>
 
         WKKeyValueStorageManagerGetKeyValueStorageOrigins may not report the correct list of origins
